--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ PORT=<server port>
 MONGO_URL=<mongoDb connect>
 JWT_SECRET=<secret_phrase>
 JWT_EXPIRES_IN = '30d'
+EMAIL_USER = <user email>
+EMAIL_PASS = <user password>
+BASE_URL = <http://localhost:PORT>
